@@ -33,11 +33,14 @@ import static org.hibernate.internal.CoreLogging.messageLogger;
 public class JavassistProxyFactory implements ProxyFactory, Serializable {
 	private static final CoreMessageLogger LOG = messageLogger( JavassistProxyFactory.class );
 
-	private static final MethodFilter FINALIZE_FILTER = new MethodFilter() {
-		public boolean isHandled(Method m) {
-			// skip finalize methods
-			return !( m.getParameterTypes().length == 0 && m.getName().equals( "finalize" ) );
-		}
+	private static final MethodFilter EXCLUDE_FILTER = m -> {
+		// skip finalize methods and Groovy getMetaClass
+		return !(
+				m.getParameterCount() == 0 && m.getName().equals( "finalize" ) || (
+						m.getName().equals( "getMetaClass" ) &&
+								m.getReturnType().getName().equals( "groovy.lang.MetaClass" )
+				)
+		);
 	};
 
 	private Class persistentClass;
@@ -98,7 +101,7 @@ public class JavassistProxyFactory implements ProxyFactory, Serializable {
 		};
 		factory.setSuperclass( interfaces.length == 1 ? persistentClass : null );
 		factory.setInterfaces( interfaces );
-		factory.setFilter( FINALIZE_FILTER );
+		factory.setFilter( EXCLUDE_FILTER );
 		return factory;
 	}
 
@@ -119,15 +122,21 @@ public class JavassistProxyFactory implements ProxyFactory, Serializable {
 		);
 
 		try {
-			final HibernateProxy proxy = (HibernateProxy) proxyClass.newInstance();
+			final HibernateProxy proxy = (HibernateProxy) proxyClass.getConstructor().newInstance();
 			( (Proxy) proxy ).setHandler( initializer );
 			initializer.constructed();
 
 			return proxy;
 		}
+		catch (NoSuchMethodException e) {
+			String logMessage = LOG.bytecodeEnhancementFailedBecauseOfDefaultConstructor( entityName );
+			LOG.error( logMessage, e );
+			throw new HibernateException( logMessage, e );
+		}
 		catch (Throwable t) {
-			LOG.error( LOG.javassistEnhancementFailed( entityName ), t );
-			throw new HibernateException( LOG.javassistEnhancementFailed( entityName ), t );
+			String logMessage = LOG.bytecodeEnhancementFailed( entityName );
+			LOG.error( logMessage, t );
+			throw new HibernateException( logMessage, t );
 		}
 	}
 
@@ -158,7 +167,7 @@ public class JavassistProxyFactory implements ProxyFactory, Serializable {
 			return proxy;
 		}
 		catch ( Throwable t ) {
-			final String message = LOG.javassistEnhancementFailed( serializableProxy.getEntityName() );
+			final String message = LOG.bytecodeEnhancementFailed( serializableProxy.getEntityName() );
 			LOG.error( message, t );
 			throw new HibernateException( message, t );
 		}
